<resources>
    <string name="app_name">YoohTravel</string>
    <string name="PA_input_text_phone">Введите свой номер телефона</string>
    <string name="PA_title_info_text">Введите номер вашего мобильного телефона\n мы вышлем вам код для верификации.</string>
    <string name="PA_send_code_btn">Отправить код</string>
    <string name="otp_default_code">0</string>
    <string name="phone_disc_image">Image_phone</string>
    <string name="phone_7_number">\n\n\n\n+7</string>
    <string name="OTP_submit">Подтвердить</string>
    <string name="otp_text_title">Введите 6-значный OTP-код, который был отправлен из SMS, чтобы завершить верификацию аккаунта.</string>
    <string name="sendcode_text">Отправить код повторно</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SignIn_google_btn">Авторизоваться через google</string>
    <string name="signIng_text_title">Пожалуйста, авторизуйтесь в приложении</string>
    <string name="signin_title_text">Для входа в приложение, пожалуйста вторизуйтесь через сервис Google</string>
</resources>