<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_white"
    tools:context=".PhoneActivity">

    <EditText
        android:id="@+id/phoneEditTextNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="phone"
        android:background="@drawable/background_radius"
        android:ems="10"
        android:hint="@string/PA_input_text_phone"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:textColor="@color/Gray"
        android:textColorHint="#606060"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/sendOTPBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber2" />

    <Button
        android:id="@+id/sendOTPBtn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/Blue"
        android:text="@string/PA_send_code_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/background_radius"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:text="@string/phone_7_number"
        android:textColor="@color/Gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/phoneEditTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/PA_title_info_text"
        android:textColor="#546E7A"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="371dp"
        android:layout_height="345dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/phone_disc_image"
        android:src="@drawable/img_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/phoneProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/Blue"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>